force-app/main/default/objects/Low_Income_Qualification__c/Low_Income_Qualification__c.object-meta.xml
<CustomObject>
    <description>Holds low income qualification parameters for CARE &amp; FERA</description>
    <label>Low Income Qualification</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Low Income Qualification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Low Income Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>