force-app/main/default/objects/Low_Income_Qualification__c/fields/Additional_Person_Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Person_Limit_Amount__c</fullName>
    <description>Each additional person, add this amount to the max amount.</description>
    <inlineHelpText>Each additional person, add this amount to the max amount.</inlineHelpText>
    <label>Additional Person Limit Amount</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>