force-app/main/default/objects/Low_Income_Qualification__c/fields/Low_Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Low_Income_Type__c</fullName>
    <label>Low Income Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARE</fullName>
            </value>
            <value>
                <fullName>FERA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>