force-app/main/default/objects/Low_Income_Qualification__c/fields/No_of_Household__c.field-meta.xml
<CustomField>
    <fullName>No_of_Household__c</fullName>
    <description>Number of household</description>
    <inlineHelpText>Number of household</inlineHelpText>
    <label>No of Household</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>