force-app/main/default/objects/Low_Income_Qualification__c/fields/Qualifying_Income_Range_from__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Income_Range_from__c</fullName>
    <label>Qualifying Income Range from</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>