force-app/main/default/objects/Low_Income_Qualification__c/listViews/CARE_FERA_Range.listView-meta.xml
<ListView>
    <fullName>CARE_FERA_Range</fullName>
    <columns>Low_Income_Type__c</columns>
    <columns>No_of_Household__c</columns>
    <columns>Qualifying_Income_Range_from__c</columns>
    <columns>Qualifying_Income_Range_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>CARE_FERA_Range</label>
</ListView>